# CppToy

./: .gitignore  CMakeLists.txt
headers/: bla.h  myTemplates.hpp  tools.h
include/: tools.h
regression_tests/: CMakeLists.txt
src/: CMakeLists.txt  a.out  add.cpp  bla.cpp  file.txt  main.cpp  myClass.cpp  overflow.cpp  polymorphism.cpp  say_hello.cpp
src/IO/: IOfstream.cpp  a.out  readBinaryFile.cpp
src/MemoryShot/: dangling_pointer.cpp  heap_mem.cpp  overflow.cpp  pointer_polymorphism.cpp
src/OpenCV/: DisplayImage.cpp
src/SmartPointers/: smart_pointers.cpp  smart_pointers_2.cpp
src/Template/: a.out
src/TestClass/: polymorphism.cpp
src/Uncommonknowledge/: constructor_desctructor.cpp  mutable_const.cpp  selfString.cpp  strcpy_memcpy.cpp  type_conversion.cpp  volatileVariable.cpp
tests/: CMakeLists.txt  example.cpp  test_add.cpp
